code/ocaml/fullref/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : IMPORT STRINGV
   4          | Term
   5          | LCID Binder
   6          | UCID TyBinder

   7  Binder : COLON Type
   8         | EQ Term

   9  Type : ArrowType
  10       | RREF AType
  11       | SSOURCE AType
  12       | SSINK AType

  13  AType : LPAREN Type RPAREN
  14        | TBOT
  15        | TTOP
  16        | USTRING
  17        | UUNIT
  18        | LT FieldTypes GT
  19        | BOOL
  20        | UCID
  21        | LCURLY FieldTypes RCURLY
  22        | UFLOAT
  23        | NAT

  24  ArrowType : AType ARROW ArrowType
  25            | AType

  26  Term : AppTerm
  27       | LAMBDA LCID COLON Type DOT Term
  28       | LAMBDA USCORE COLON Type DOT Term
  29       | AppTerm COLONEQ AppTerm
  30       | CASE Term OF Cases
  31       | LET LCID EQ Term IN Term
  32       | LET USCORE EQ Term IN Term
  33       | LETREC LCID COLON Type EQ Term IN Term
  34       | IF Term THEN Term ELSE Term

  35  AppTerm : PathTerm
  36          | AppTerm PathTerm
  37          | REF PathTerm
  38          | BANG PathTerm
  39          | FIX PathTerm
  40          | TIMESFLOAT PathTerm PathTerm
  41          | SUCC PathTerm
  42          | PRED PathTerm
  43          | ISZERO PathTerm

  44  AscribeTerm : ATerm AS Type
  45              | ATerm

  46  FieldTypes :
  47             | NEFieldTypes

  48  NEFieldTypes : FieldType
  49               | FieldType COMMA NEFieldTypes

  50  FieldType : LCID COLON Type
  51            | Type

  52  PathTerm : PathTerm DOT LCID
  53           | PathTerm DOT INTV
  54           | AscribeTerm

  55  TermSeq : Term
  56          | Term SEMI TermSeq

  57  ATerm : LPAREN TermSeq RPAREN
  58        | LCID
  59        | STRINGV
  60        | UNIT
  61        | LT LCID EQ Term GT AS Type
  62        | TRUE
  63        | FALSE
  64        | FLOATV
  65        | LCURLY Fields RCURLY
  66        | INTV
  67        | INERT LSQUARE Type RSQUARE

  68  Cases : Case
  69        | Case VBAR Cases

  70  Case : LT LCID EQ LCID GT DDARROW AppTerm

  71  Fields :
  72         | NEFields

  73  NEFields : Field
  74           | Field COMMA NEFields

  75  Field : LCID EQ Term
  76        | Term

  77  TyBinder :
  78           | EQ Type

  79  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (79)

	IMPORT  shift 3
	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	UCID  shift 19
	LCID  shift 20
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	BANG  shift 24
	EOF  shift 25
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	toplevel  goto 29
	Command  goto 30
	Term  goto 31
	AppTerm  goto 32
	PathTerm  goto 33
	AscribeTerm  goto 34
	ATerm  goto 35


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Command : IMPORT . STRINGV  (3)

	STRINGV  shift 36
	.  error


state 4
	Term : LAMBDA . LCID COLON Type DOT Term  (27)
	Term : LAMBDA . USCORE COLON Type DOT Term  (28)

	LCID  shift 37
	USCORE  shift 38
	.  error


state 5
	ATerm : UNIT .  (60)

	.  reduce 60


state 6
	AppTerm : REF . PathTerm  (37)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	PathTerm  goto 40
	AscribeTerm  goto 34
	ATerm  goto 35


state 7
	Term : CASE . Term OF Cases  (30)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	BANG  shift 24
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	Term  goto 41
	AppTerm  goto 32
	PathTerm  goto 33
	AscribeTerm  goto 34
	ATerm  goto 35


state 8
	Term : LET . LCID EQ Term IN Term  (31)
	Term : LET . USCORE EQ Term IN Term  (32)

	LCID  shift 42
	USCORE  shift 43
	.  error


state 9
	AppTerm : FIX . PathTerm  (39)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	PathTerm  goto 44
	AscribeTerm  goto 34
	ATerm  goto 35


state 10
	Term : LETREC . LCID COLON Type EQ Term IN Term  (33)

	LCID  shift 45
	.  error


state 11
	Term : IF . Term THEN Term ELSE Term  (34)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	BANG  shift 24
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	Term  goto 46
	AppTerm  goto 32
	PathTerm  goto 33
	AscribeTerm  goto 34
	ATerm  goto 35


state 12
	ATerm : TRUE .  (62)

	.  reduce 62


state 13
	ATerm : FALSE .  (63)

	.  reduce 63


state 14
	AppTerm : TIMESFLOAT . PathTerm PathTerm  (40)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	PathTerm  goto 47
	AscribeTerm  goto 34
	ATerm  goto 35


state 15
	AppTerm : SUCC . PathTerm  (41)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	PathTerm  goto 48
	AscribeTerm  goto 34
	ATerm  goto 35


state 16
	AppTerm : PRED . PathTerm  (42)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	PathTerm  goto 49
	AscribeTerm  goto 34
	ATerm  goto 35


state 17
	AppTerm : ISZERO . PathTerm  (43)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	PathTerm  goto 50
	AscribeTerm  goto 34
	ATerm  goto 35


state 18
	ATerm : INERT . LSQUARE Type RSQUARE  (67)

	LSQUARE  shift 51
	.  error


state 19
	Command : UCID . TyBinder  (6)
	TyBinder : .  (77)

	EQ  shift 52
	SEMI  reduce 77

	TyBinder  goto 53


state 20
	Command : LCID . Binder  (5)
	ATerm : LCID .  (58)

	COLON  shift 54
	EQ  shift 55
	AS  reduce 58
	UNIT  reduce 58
	TRUE  reduce 58
	FALSE  reduce 58
	INERT  reduce 58
	LCID  reduce 58
	INTV  reduce 58
	FLOATV  reduce 58
	STRINGV  reduce 58
	COLONEQ  reduce 58
	DOT  reduce 58
	LCURLY  reduce 58
	LPAREN  reduce 58
	LT  reduce 58
	SEMI  reduce 58

	Binder  goto 56


state 21
	ATerm : INTV .  (66)

	.  reduce 66


state 22
	ATerm : FLOATV .  (64)

	.  reduce 64


state 23
	ATerm : STRINGV .  (59)

	.  reduce 59


state 24
	AppTerm : BANG . PathTerm  (38)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	PathTerm  goto 57
	AscribeTerm  goto 34
	ATerm  goto 35


state 25
	toplevel : EOF .  (1)

	.  reduce 1


state 26
	ATerm : LCURLY . Fields RCURLY  (65)
	Fields : .  (71)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	LCID  shift 58
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	BANG  shift 24
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	RCURLY  reduce 71

	Term  goto 59
	AppTerm  goto 32
	PathTerm  goto 33
	AscribeTerm  goto 34
	ATerm  goto 35
	Fields  goto 60
	NEFields  goto 61
	Field  goto 62


state 27
	ATerm : LPAREN . TermSeq RPAREN  (57)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	BANG  shift 24
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	Term  goto 63
	AppTerm  goto 32
	PathTerm  goto 33
	AscribeTerm  goto 34
	ATerm  goto 35
	TermSeq  goto 64


state 28
	ATerm : LT . LCID EQ Term GT AS Type  (61)

	LCID  shift 65
	.  error


state 29
	%entry% : '\001' toplevel .  (79)

	.  reduce 79


state 30
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 66
	.  error


state 31
	Command : Term .  (4)

	.  reduce 4


state 32
	Term : AppTerm .  (26)
	Term : AppTerm . COLONEQ AppTerm  (29)
	AppTerm : AppTerm . PathTerm  (36)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	COLONEQ  shift 67
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	OF  reduce 26
	IN  reduce 26
	THEN  reduce 26
	ELSE  reduce 26
	COMMA  reduce 26
	GT  reduce 26
	RCURLY  reduce 26
	RPAREN  reduce 26
	SEMI  reduce 26

	PathTerm  goto 68
	AscribeTerm  goto 34
	ATerm  goto 35


state 33
	AppTerm : PathTerm .  (35)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	DOT  shift 69
	UNIT  reduce 35
	OF  reduce 35
	IN  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	TRUE  reduce 35
	FALSE  reduce 35
	INERT  reduce 35
	LCID  reduce 35
	INTV  reduce 35
	FLOATV  reduce 35
	STRINGV  reduce 35
	COLONEQ  reduce 35
	COMMA  reduce 35
	GT  reduce 35
	LCURLY  reduce 35
	LPAREN  reduce 35
	LT  reduce 35
	RCURLY  reduce 35
	RPAREN  reduce 35
	SEMI  reduce 35
	VBAR  reduce 35


state 34
	PathTerm : AscribeTerm .  (54)

	.  reduce 54


state 35
	AscribeTerm : ATerm . AS Type  (44)
	AscribeTerm : ATerm .  (45)

	AS  shift 70
	UNIT  reduce 45
	OF  reduce 45
	IN  reduce 45
	THEN  reduce 45
	ELSE  reduce 45
	TRUE  reduce 45
	FALSE  reduce 45
	INERT  reduce 45
	LCID  reduce 45
	INTV  reduce 45
	FLOATV  reduce 45
	STRINGV  reduce 45
	COLONEQ  reduce 45
	COMMA  reduce 45
	DOT  reduce 45
	GT  reduce 45
	LCURLY  reduce 45
	LPAREN  reduce 45
	LT  reduce 45
	RCURLY  reduce 45
	RPAREN  reduce 45
	SEMI  reduce 45
	VBAR  reduce 45


state 36
	Command : IMPORT STRINGV .  (3)

	.  reduce 3


state 37
	Term : LAMBDA LCID . COLON Type DOT Term  (27)

	COLON  shift 71
	.  error


state 38
	Term : LAMBDA USCORE . COLON Type DOT Term  (28)

	COLON  shift 72
	.  error


state 39
	ATerm : LCID .  (58)

	.  reduce 58


state 40
	AppTerm : REF PathTerm .  (37)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	DOT  shift 69
	UNIT  reduce 37
	OF  reduce 37
	IN  reduce 37
	THEN  reduce 37
	ELSE  reduce 37
	TRUE  reduce 37
	FALSE  reduce 37
	INERT  reduce 37
	LCID  reduce 37
	INTV  reduce 37
	FLOATV  reduce 37
	STRINGV  reduce 37
	COLONEQ  reduce 37
	COMMA  reduce 37
	GT  reduce 37
	LCURLY  reduce 37
	LPAREN  reduce 37
	LT  reduce 37
	RCURLY  reduce 37
	RPAREN  reduce 37
	SEMI  reduce 37
	VBAR  reduce 37


state 41
	Term : CASE Term . OF Cases  (30)

	OF  shift 73
	.  error


state 42
	Term : LET LCID . EQ Term IN Term  (31)

	EQ  shift 74
	.  error


state 43
	Term : LET USCORE . EQ Term IN Term  (32)

	EQ  shift 75
	.  error


state 44
	AppTerm : FIX PathTerm .  (39)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	DOT  shift 69
	UNIT  reduce 39
	OF  reduce 39
	IN  reduce 39
	THEN  reduce 39
	ELSE  reduce 39
	TRUE  reduce 39
	FALSE  reduce 39
	INERT  reduce 39
	LCID  reduce 39
	INTV  reduce 39
	FLOATV  reduce 39
	STRINGV  reduce 39
	COLONEQ  reduce 39
	COMMA  reduce 39
	GT  reduce 39
	LCURLY  reduce 39
	LPAREN  reduce 39
	LT  reduce 39
	RCURLY  reduce 39
	RPAREN  reduce 39
	SEMI  reduce 39
	VBAR  reduce 39


state 45
	Term : LETREC LCID . COLON Type EQ Term IN Term  (33)

	COLON  shift 76
	.  error


state 46
	Term : IF Term . THEN Term ELSE Term  (34)

	THEN  shift 77
	.  error


state 47
	AppTerm : TIMESFLOAT PathTerm . PathTerm  (40)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	UNIT  shift 5
	TRUE  shift 12
	FALSE  shift 13
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	DOT  shift 69
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	PathTerm  goto 78
	AscribeTerm  goto 34
	ATerm  goto 35


state 48
	AppTerm : SUCC PathTerm .  (41)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	DOT  shift 69
	UNIT  reduce 41
	OF  reduce 41
	IN  reduce 41
	THEN  reduce 41
	ELSE  reduce 41
	TRUE  reduce 41
	FALSE  reduce 41
	INERT  reduce 41
	LCID  reduce 41
	INTV  reduce 41
	FLOATV  reduce 41
	STRINGV  reduce 41
	COLONEQ  reduce 41
	COMMA  reduce 41
	GT  reduce 41
	LCURLY  reduce 41
	LPAREN  reduce 41
	LT  reduce 41
	RCURLY  reduce 41
	RPAREN  reduce 41
	SEMI  reduce 41
	VBAR  reduce 41


state 49
	AppTerm : PRED PathTerm .  (42)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	DOT  shift 69
	UNIT  reduce 42
	OF  reduce 42
	IN  reduce 42
	THEN  reduce 42
	ELSE  reduce 42
	TRUE  reduce 42
	FALSE  reduce 42
	INERT  reduce 42
	LCID  reduce 42
	INTV  reduce 42
	FLOATV  reduce 42
	STRINGV  reduce 42
	COLONEQ  reduce 42
	COMMA  reduce 42
	GT  reduce 42
	LCURLY  reduce 42
	LPAREN  reduce 42
	LT  reduce 42
	RCURLY  reduce 42
	RPAREN  reduce 42
	SEMI  reduce 42
	VBAR  reduce 42


state 50
	AppTerm : ISZERO PathTerm .  (43)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	DOT  shift 69
	UNIT  reduce 43
	OF  reduce 43
	IN  reduce 43
	THEN  reduce 43
	ELSE  reduce 43
	TRUE  reduce 43
	FALSE  reduce 43
	INERT  reduce 43
	LCID  reduce 43
	INTV  reduce 43
	FLOATV  reduce 43
	STRINGV  reduce 43
	COLONEQ  reduce 43
	COMMA  reduce 43
	GT  reduce 43
	LCURLY  reduce 43
	LPAREN  reduce 43
	LT  reduce 43
	RCURLY  reduce 43
	RPAREN  reduce 43
	SEMI  reduce 43
	VBAR  reduce 43


state 51
	ATerm : INERT LSQUARE . Type RSQUARE  (67)

	TBOT  shift 79
	TTOP  shift 80
	USTRING  shift 81
	UUNIT  shift 82
	RREF  shift 83
	BOOL  shift 84
	SSOURCE  shift 85
	SSINK  shift 86
	UFLOAT  shift 87
	NAT  shift 88
	UCID  shift 89
	LCURLY  shift 90
	LPAREN  shift 91
	LT  shift 92
	.  error

	Type  goto 93
	ArrowType  goto 94
	AType  goto 95


state 52
	TyBinder : EQ . Type  (78)

	TBOT  shift 79
	TTOP  shift 80
	USTRING  shift 81
	UUNIT  shift 82
	RREF  shift 83
	BOOL  shift 84
	SSOURCE  shift 85
	SSINK  shift 86
	UFLOAT  shift 87
	NAT  shift 88
	UCID  shift 89
	LCURLY  shift 90
	LPAREN  shift 91
	LT  shift 92
	.  error

	Type  goto 96
	ArrowType  goto 94
	AType  goto 95


state 53
	Command : UCID TyBinder .  (6)

	.  reduce 6


state 54
	Binder : COLON . Type  (7)

	TBOT  shift 79
	TTOP  shift 80
	USTRING  shift 81
	UUNIT  shift 82
	RREF  shift 83
	BOOL  shift 84
	SSOURCE  shift 85
	SSINK  shift 86
	UFLOAT  shift 87
	NAT  shift 88
	UCID  shift 89
	LCURLY  shift 90
	LPAREN  shift 91
	LT  shift 92
	.  error

	Type  goto 97
	ArrowType  goto 94
	AType  goto 95


state 55
	Binder : EQ . Term  (8)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	BANG  shift 24
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	Term  goto 98
	AppTerm  goto 32
	PathTerm  goto 33
	AscribeTerm  goto 34
	ATerm  goto 35


state 56
	Command : LCID Binder .  (5)

	.  reduce 5


state 57
	AppTerm : BANG PathTerm .  (38)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	DOT  shift 69
	UNIT  reduce 38
	OF  reduce 38
	IN  reduce 38
	THEN  reduce 38
	ELSE  reduce 38
	TRUE  reduce 38
	FALSE  reduce 38
	INERT  reduce 38
	LCID  reduce 38
	INTV  reduce 38
	FLOATV  reduce 38
	STRINGV  reduce 38
	COLONEQ  reduce 38
	COMMA  reduce 38
	GT  reduce 38
	LCURLY  reduce 38
	LPAREN  reduce 38
	LT  reduce 38
	RCURLY  reduce 38
	RPAREN  reduce 38
	SEMI  reduce 38
	VBAR  reduce 38


state 58
	ATerm : LCID .  (58)
	Field : LCID . EQ Term  (75)

	EQ  shift 99
	AS  reduce 58
	UNIT  reduce 58
	TRUE  reduce 58
	FALSE  reduce 58
	INERT  reduce 58
	LCID  reduce 58
	INTV  reduce 58
	FLOATV  reduce 58
	STRINGV  reduce 58
	COLONEQ  reduce 58
	COMMA  reduce 58
	DOT  reduce 58
	LCURLY  reduce 58
	LPAREN  reduce 58
	LT  reduce 58
	RCURLY  reduce 58


state 59
	Field : Term .  (76)

	.  reduce 76


state 60
	ATerm : LCURLY Fields . RCURLY  (65)

	RCURLY  shift 100
	.  error


state 61
	Fields : NEFields .  (72)

	.  reduce 72


state 62
	NEFields : Field .  (73)
	NEFields : Field . COMMA NEFields  (74)

	COMMA  shift 101
	RCURLY  reduce 73


state 63
	TermSeq : Term .  (55)
	TermSeq : Term . SEMI TermSeq  (56)

	SEMI  shift 102
	RPAREN  reduce 55


state 64
	ATerm : LPAREN TermSeq . RPAREN  (57)

	RPAREN  shift 103
	.  error


state 65
	ATerm : LT LCID . EQ Term GT AS Type  (61)

	EQ  shift 104
	.  error


state 66
	toplevel : Command SEMI . toplevel  (2)

	IMPORT  shift 3
	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	UCID  shift 19
	LCID  shift 20
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	BANG  shift 24
	EOF  shift 25
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	toplevel  goto 105
	Command  goto 30
	Term  goto 31
	AppTerm  goto 32
	PathTerm  goto 33
	AscribeTerm  goto 34
	ATerm  goto 35


state 67
	Term : AppTerm COLONEQ . AppTerm  (29)

	UNIT  shift 5
	REF  shift 6
	FIX  shift 9
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	BANG  shift 24
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	AppTerm  goto 106
	PathTerm  goto 33
	AscribeTerm  goto 34
	ATerm  goto 35


state 68
	AppTerm : AppTerm PathTerm .  (36)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	DOT  shift 69
	UNIT  reduce 36
	OF  reduce 36
	IN  reduce 36
	THEN  reduce 36
	ELSE  reduce 36
	TRUE  reduce 36
	FALSE  reduce 36
	INERT  reduce 36
	LCID  reduce 36
	INTV  reduce 36
	FLOATV  reduce 36
	STRINGV  reduce 36
	COLONEQ  reduce 36
	COMMA  reduce 36
	GT  reduce 36
	LCURLY  reduce 36
	LPAREN  reduce 36
	LT  reduce 36
	RCURLY  reduce 36
	RPAREN  reduce 36
	SEMI  reduce 36
	VBAR  reduce 36


state 69
	PathTerm : PathTerm DOT . LCID  (52)
	PathTerm : PathTerm DOT . INTV  (53)

	LCID  shift 107
	INTV  shift 108
	.  error


state 70
	AscribeTerm : ATerm AS . Type  (44)

	TBOT  shift 79
	TTOP  shift 80
	USTRING  shift 81
	UUNIT  shift 82
	RREF  shift 83
	BOOL  shift 84
	SSOURCE  shift 85
	SSINK  shift 86
	UFLOAT  shift 87
	NAT  shift 88
	UCID  shift 89
	LCURLY  shift 90
	LPAREN  shift 91
	LT  shift 92
	.  error

	Type  goto 109
	ArrowType  goto 94
	AType  goto 95


state 71
	Term : LAMBDA LCID COLON . Type DOT Term  (27)

	TBOT  shift 79
	TTOP  shift 80
	USTRING  shift 81
	UUNIT  shift 82
	RREF  shift 83
	BOOL  shift 84
	SSOURCE  shift 85
	SSINK  shift 86
	UFLOAT  shift 87
	NAT  shift 88
	UCID  shift 89
	LCURLY  shift 90
	LPAREN  shift 91
	LT  shift 92
	.  error

	Type  goto 110
	ArrowType  goto 94
	AType  goto 95


state 72
	Term : LAMBDA USCORE COLON . Type DOT Term  (28)

	TBOT  shift 79
	TTOP  shift 80
	USTRING  shift 81
	UUNIT  shift 82
	RREF  shift 83
	BOOL  shift 84
	SSOURCE  shift 85
	SSINK  shift 86
	UFLOAT  shift 87
	NAT  shift 88
	UCID  shift 89
	LCURLY  shift 90
	LPAREN  shift 91
	LT  shift 92
	.  error

	Type  goto 111
	ArrowType  goto 94
	AType  goto 95


state 73
	Term : CASE Term OF . Cases  (30)

	LT  shift 112
	.  error

	Cases  goto 113
	Case  goto 114


state 74
	Term : LET LCID EQ . Term IN Term  (31)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	BANG  shift 24
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	Term  goto 115
	AppTerm  goto 32
	PathTerm  goto 33
	AscribeTerm  goto 34
	ATerm  goto 35


state 75
	Term : LET USCORE EQ . Term IN Term  (32)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	BANG  shift 24
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	Term  goto 116
	AppTerm  goto 32
	PathTerm  goto 33
	AscribeTerm  goto 34
	ATerm  goto 35


state 76
	Term : LETREC LCID COLON . Type EQ Term IN Term  (33)

	TBOT  shift 79
	TTOP  shift 80
	USTRING  shift 81
	UUNIT  shift 82
	RREF  shift 83
	BOOL  shift 84
	SSOURCE  shift 85
	SSINK  shift 86
	UFLOAT  shift 87
	NAT  shift 88
	UCID  shift 89
	LCURLY  shift 90
	LPAREN  shift 91
	LT  shift 92
	.  error

	Type  goto 117
	ArrowType  goto 94
	AType  goto 95


state 77
	Term : IF Term THEN . Term ELSE Term  (34)

	LAMBDA  shift 4
	UNIT  shift 5
	REF  shift 6
	CASE  shift 7
	LET  shift 8
	FIX  shift 9
	LETREC  shift 10
	IF  shift 11
	TRUE  shift 12
	FALSE  shift 13
	TIMESFLOAT  shift 14
	SUCC  shift 15
	PRED  shift 16
	ISZERO  shift 17
	INERT  shift 18
	LCID  shift 39
	INTV  shift 21
	FLOATV  shift 22
	STRINGV  shift 23
	BANG  shift 24
	LCURLY  shift 26
	LPAREN  shift 27
	LT  shift 28
	.  error

	Term  goto 118
	AppTerm  goto 32
	PathTerm  goto 33
	AscribeTerm  goto 34
	ATerm  goto 35


state 78
	AppTerm : TIMESFLOAT PathTerm PathTerm .  (40)
	PathTerm : PathTerm . DOT LCID  (52)
	PathTerm : PathTerm . DOT INTV  (53)

	DOT  shift 69
	UNIT  reduce 40
	OF  reduce 40
	IN  reduce 40
	THEN  reduce 40
	ELSE  reduce 40
	TRUE  reduce 40
	FALSE  reduce 40
	INERT  reduce 40
	LCID  reduce 40
	INTV  reduce 40
	FLOATV  reduce 40
	STRINGV  reduce 40
	COLONEQ  reduce 40
	COMMA  reduce 40
	GT  reduce 40
	LCURLY  reduce 40
	LPAREN  reduce 40
	LT  reduce 40
	RCURLY  reduce 40
	RPAREN  reduce 40
	SEMI  reduce 40
	VBAR  reduce 40


state 79
	AType : TBOT .  (14)

	.  reduce 14


state 80
	AType : TTOP .  (15)

	.  reduce 15


state 81
	AType : USTRING .  (16)

	.  reduce 16


state 82
	AType : UUNIT .  (17)

	.  reduce 17


state 83
	Type : RREF . AType  (10)

	TBOT  shift 79
	TTOP  shift 80
	USTRING  shift 81
	UUNIT  shift 82
	BOOL  shift 84
	UFLOAT  shift 87
	NAT  shift 88
	UCID  shift 89
	LCURLY  shift 90
	LPAREN  shift 91
	LT  shift 92
	.  error

	AType  goto 119


state 84
	AType : BOOL .  (19)

	.  reduce 19


state 85
	Type : SSOURCE . AType  (11)

	TBOT  shift 79
	TTOP  shift 80
	USTRING  shift 81
	UUNIT  shift 82
	BOOL  shift 84
	UFLOAT  shift 87
	NAT  shift 88
	UCID  shift 89
	LCURLY  shift 90
	LPAREN  shift 91
	LT  shift 92
	.  error

	AType  goto 120


state 86
	Type : SSINK . AType  (12)

	TBOT  shift 79
	TTOP  shift 80
	USTRING  shift 81
	UUNIT  shift 82
	BOOL  shift 84
	UFLOAT  shift 87
	NAT  shift 88
	UCID  shift 89
	LCURLY  shift 90
	LPAREN  shift 91
	LT  shift 92
	.  error

	AType  goto 121


state 87
	AType : UFLOAT .  (22)

	.  reduce 22

